refactor: mypage 도메인 리팩토링(#267)