@@ -1,15 +1,11 @@
 package PodoeMarket.podoemarket.profile.controller;
 
-import PodoeMarket.podoemarket.Utils.EntityToDTOConverter;
 import PodoeMarket.podoemarket.common.entity.*;
-import PodoeMarket.podoemarket.common.entity.type.OrderStatus;
 import PodoeMarket.podoemarket.common.entity.type.PlayType;
-import PodoeMarket.podoemarket.dto.PerformanceDateDTO;
-import PodoeMarket.podoemarket.dto.response.*;
+import PodoeMarket.podoemarket.dto.ResponseDTO;
 import PodoeMarket.podoemarket.profile.dto.response.RequestedPerformanceResponseDTO;
 import PodoeMarket.podoemarket.profile.dto.request.*;
 import PodoeMarket.podoemarket.profile.dto.response.*;
-import PodoeMarket.podoemarket.product.service.ProductService;
 import PodoeMarket.podoemarket.profile.service.MypageService;
 import PodoeMarket.podoemarket.user.service.UserService;
 import lombok.RequiredArgsConstructor;
@@ -23,6 +19,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
@@ -34,10 +31,6 @@ import java.util.UUID;
 public class MypageController {
     private final MypageService mypageService;
     private final UserService userService;
-    private final ProductService productService;
-
-    @Value("${cloud.aws.s3.url}")
-    private String bucketURL;
 
     @GetMapping("/confirm")
     public ResponseEntity<?> getNickname(@AuthenticationPrincipal UserEntity userInfo) {
@@ -70,16 +63,9 @@ public class MypageController {
     @GetMapping("/account")
     public ResponseEntity<?> account(@AuthenticationPrincipal UserEntity userInfo){
         try {
-            final UserEntity user = mypageService.originalUser(userInfo.getId());
+            final ProfileInfoResponseDTO profile = mypageService.getProfileInfo(userInfo.getId());
 
-            final ProfileInfoResponseDTO info = ProfileInfoResponseDTO.builder()
-                    .id(user.getId())
-                    .userId(user.getUserId())
-                    .nickname(user.getNickname())
-                    .email(user.getEmail())
-                    .build();
-
-            return ResponseEntity.ok().body(info);
+            return ResponseEntity.ok().body(profile);
         }catch(Exception e) {
             ResponseDTO resDTO = ResponseDTO.builder().error(e.getMessage()).build();
             return ResponseEntity.badRequest().body(resDTO);
@@ -130,7 +116,7 @@ public class MypageController {
     @GetMapping("/detail")
     public ResponseEntity<?> scriptDetail(@RequestParam("script") UUID productId) {
         try{
-            ScriptDetailResponseDTO productInfo = mypageService.productDetail(productId, 0);
+            final ScriptDetailResponseDTO productInfo = mypageService.productDetail(productId, 0);
 
             return ResponseEntity.ok().body(productInfo);
         } catch(Exception e) {
@@ -192,19 +178,7 @@ public class MypageController {
     @GetMapping("/apply")
     public ResponseEntity<?> showApply(@RequestParam("id") UUID orderItemId) {
         try {
-            final OrderItemEntity orderItem = mypageService.getOrderItem(orderItemId);
-
-            if(orderItem.getOrder().getOrderStatus() != OrderStatus.PASS) {
-                ResponseDTO resDTO = ResponseDTO.builder()
-                        .error("결제 상태를 확인해주십시오.")
-                        .build();
-
-                return ResponseEntity.badRequest().body(resDTO);
-            }
-
-            final ApplicantEntity applicant = mypageService.getApplicant(orderItemId);
-
-            ApplyDTO applyDTO = EntityToDTOConverter.convertToApplyDTO(orderItem, applicant, bucketURL);
+            ApplyResponseDTO applyDTO = mypageService.getApplyInfo(orderItemId);
 
             return ResponseEntity.ok().body(applyDTO);
         } catch (Exception e) {
@@ -214,35 +188,9 @@ public class MypageController {
     }
 
     @PostMapping("/apply")
-    public ResponseEntity<?> apply(@RequestBody ApplyDTO dto) {
+    public ResponseEntity<?> apply(@RequestBody ApplyRequestDTO dto) {
         try {
-            final OrderItemEntity orderItem = mypageService.getOrderItem(dto.getOrderItemId());
-            mypageService.expire(orderItem.getCreatedAt());
-
-            if(dto.getPerformanceDate().size() > (orderItem.getPerformanceAmount() - mypageService.registerDatesNum(dto.getOrderItemId()))) {
-                ResponseDTO resDTO = ResponseDTO.builder()
-                        .error("공연권 구매량 초과")
-                        .build();
-
-                return ResponseEntity.badRequest().body(resDTO);
-            }
-
-            if(dto.getPerformanceDate().isEmpty()) {
-                ResponseDTO resDTO = ResponseDTO.builder()
-                        .error("신청 날짜가 비어있음")
-                        .build();
-
-                return ResponseEntity.badRequest().body(resDTO);
-            }
-
-            for(PerformanceDateDTO dateDto : dto.getPerformanceDate()) {
-                final PerformanceDateEntity date = PerformanceDateEntity.builder()
-                        .date(dateDto.getDate())
-                        .orderItem(orderItem)
-                        .build();
-
-                mypageService.dateRegister(date);
-            }
+            mypageService.processPerformanceApplication(dto);
 
             return ResponseEntity.ok().body(true);
         } catch (Exception e) {
@@ -254,28 +202,11 @@ public class MypageController {
     @GetMapping(value = "/download", produces = "application/json; charset=UTF-8")
     public ResponseEntity<?> scriptDownload(@AuthenticationPrincipal UserEntity userInfo, @RequestParam("id") UUID orderId) {
         try {
-            final OrderItemEntity item = mypageService.getOrderItem(orderId);
-            if(!item.getScript()) {
-                ResponseDTO resDTO = ResponseDTO.builder()
-                        .error("대본을 구매하세요.")
-                        .build();
+            ScriptInfoResponseDTO scriptInfo = mypageService.checkValidation(orderId);
 
-                return ResponseEntity.badRequest().body(resDTO);
-            }
+            byte[] fileData = mypageService.downloadFile(scriptInfo.getFilePath(), userInfo.getEmail());
 
-            if(item.getOrder().getOrderStatus() != OrderStatus.PASS) {
-                ResponseDTO resDTO = ResponseDTO.builder()
-                        .error("결제 상태를 확인해주십시오.")
-                        .build();
-
-                return ResponseEntity.badRequest().body(resDTO);
-            }
-
-            mypageService.expire(item.getCreatedAt());
-
-            byte[] fileData = mypageService.downloadFile(item.getProduct().getFilePath(), userInfo.getEmail());
-
-            String encodedFilename = URLEncoder.encode(item.getProduct().getTitle(), "UTF-8");
+            String encodedFilename = URLEncoder.encode(scriptInfo.getTitle(), StandardCharsets.UTF_8);
 
             return ResponseEntity.ok()
                     .contentType(MediaType.APPLICATION_PDF) // PDF 파일 형식으로 설정
@@ -300,25 +231,9 @@ public class MypageController {
     }
 
     @GetMapping("/refund")
-    public ResponseEntity<?> refundInto(@RequestParam("id") UUID orderItemId) {
+    public ResponseEntity<?> refundInfo(@RequestParam("id") UUID orderItemId) {
         try {
-            final OrderItemEntity orderItem = mypageService.getOrderItem(orderItemId);
-
-            final int possibleAmount = orderItem.getPerformanceAmount() - mypageService.registerDatesNum(orderItemId);
-            final int possiblePrice = orderItem.getProduct().getPerformancePrice() * possibleAmount;
-
-            RefundDTO resDTO = RefundDTO.builder()
-                    .scriptImage(orderItem.getProduct().getImagePath())
-                    .title(orderItem.getTitle())
-                    .writer(orderItem.getProduct().getWriter())
-                    .performancePrice(orderItem.getProduct().getPerformancePrice())
-                    .orderDate(orderItem.getCreatedAt())
-                    .orderNum(orderItem.getOrder().getId())
-                    .orderAmount(orderItem.getPerformanceAmount())
-                    .orderPrice(orderItem.getPerformancePrice())
-                    .possibleAmount(possibleAmount)
-                    .possiblePrice(possiblePrice)
-                    .build();
+            RefundResponseDTO resDTO = mypageService.getRefundInfo(orderItemId);
 
             return ResponseEntity.ok().body(resDTO);
         } catch (Exception e) {
@@ -328,36 +243,9 @@ public class MypageController {
     }
 
     @PostMapping("/refund")
-    public ResponseEntity<?> refund(@AuthenticationPrincipal UserEntity userInfo, @RequestBody RefundDTO dto) {
+    public ResponseEntity<?> refund(@AuthenticationPrincipal UserEntity userInfo, @RequestBody RefundRequestDTO dto) {
         try {
-            final OrderItemEntity orderItem = mypageService.getOrderItem(dto.getOrderItemId());
-            final int possibleAmount = orderItem.getPerformanceAmount() - mypageService.registerDatesNum(dto.getOrderItemId());
-            final int possiblePrice = orderItem.getProduct().getPerformancePrice() * possibleAmount;
-            final int refundPrice = orderItem.getProduct().getPerformancePrice() * dto.getRefundAmount();
-
-            if(dto.getRefundAmount() > possibleAmount || refundPrice > possiblePrice || dto.getRefundAmount() == 0 || refundPrice < 0) {
-                ResponseDTO resDTO = ResponseDTO.builder()
-                        .error("환불 가능 수량과 가격이 아님")
-                        .build();
-                return ResponseEntity.badRequest().body(resDTO);
-            }
-
-            if(dto.getReason().isEmpty() || dto.getReason().length() > 50) {
-                ResponseDTO resDTO = ResponseDTO.builder()
-                        .error("환불 사유는 1 ~ 50자까지 가능")
-                        .build();
-                return ResponseEntity.badRequest().body(resDTO);
-            }
-
-            final RefundEntity refund = RefundEntity.builder()
-                    .quantity(dto.getRefundAmount())
-                    .price(refundPrice)
-                    .content(dto.getReason())
-                    .order(orderItem.getOrder())
-                    .user(userInfo)
-                    .build();
-
-            mypageService.refundRegister(refund);
+            mypageService.refundProcess(userInfo, dto);
 
             return ResponseEntity.ok().body(true);
         } catch (Exception e) {
@@ -367,15 +255,9 @@ public class MypageController {
     }
 
     @GetMapping("/requested")
-    public ResponseEntity<?> getRequestedPerformances(@RequestParam("id") UUID scriptId, @AuthenticationPrincipal UserEntity userInfo) {
+    public ResponseEntity<?> getRequestedPerformances(@RequestParam("id") UUID productId, @AuthenticationPrincipal UserEntity userInfo) {
         try {
-            final RequestedPerformanceResponseDTO.ProductInfo productInfo = mypageService.getProductInfo(scriptId, userInfo);
-            final List<RequestedPerformanceResponseDTO.DateRequestedList> list = mypageService.getDateRequestedList(scriptId);
-
-            final RequestedPerformanceResponseDTO performanceList = RequestedPerformanceResponseDTO.builder()
-                    .productInfo(productInfo)
-                    .dateRequestedList(list)
-                    .build();
+            RequestedPerformanceResponseDTO performanceList = mypageService.getRequestedPerformances(productId, userInfo);
 
             return ResponseEntity.ok().body(performanceList);
         } catch (Exception e) {
@@ -387,8 +269,7 @@ public class MypageController {
     @GetMapping("/like")
     public ResponseEntity<?> getLikeList(@AuthenticationPrincipal UserEntity userInfo) {
         try {
-            final ScriptListResponseDTO lists = new ScriptListResponseDTO(mypageService.getLikePlayList(0, userInfo, PlayType.LONG, 4),
-                    mypageService.getLikePlayList(0, userInfo, PlayType.SHORT, 4));
+            final ScriptListResponseDTO lists = mypageService.getUserLikeList(userInfo);
 
             return ResponseEntity.ok().body(lists);
         } catch (Exception e) {
